# AI-Service-Lab

./: .gitignore  README.md
week01-model-finetune/: W1-RESULTS.md  mlx-tutorial.ipynb  pyproject.toml
week01-model-finetune/adapters/nsmc-qwen0p5b-r8/: adapter_config.json  adapters.safetensors
