[project]
name = "week01-model-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "ipykernel>=6.30.1",
    "mlx-lm>=0.26.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
